<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.post.CreatePostFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_l">

            <ImageView
                android:id="@+id/ivPostImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="#E0E0E0"
                android:contentDescription="@string/cd_selected_photo"
                android:scaleType="centerCrop"
                android:src="@android:drawable/ic_menu_camera"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_post_change_photo_hint"
                android:textColor="#757575"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/ivPostImage"
                app:layout_constraintStart_toStartOf="@id/ivPostImage"
                app:layout_constraintTop_toBottomOf="@id/ivPostImage" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTitle"
                style="@style/Ant.Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xl"
                android:hint="@string/create_post_title_hint"
                app:layout_constraintTop_toBottomOf="@id/ivPostImage">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/cd_post_title_input" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDistrict"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_l"
                android:hint="@string/create_post_district_hint"
                app:boxCornerRadiusTopStart="@dimen/radius_s"
                app:boxCornerRadiusTopEnd="@dimen/radius_s"
                app:boxCornerRadiusBottomStart="@dimen/radius_s"
                app:boxCornerRadiusBottomEnd="@dimen/radius_s"
                app:boxStrokeColor="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@id/tilTitle">

                <AutoCompleteTextView
                    android:id="@+id/actvDistrict"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:text="@string/district_iskenderun" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCategory"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_l"
                android:hint="@string/create_post_category_hint"
                app:boxCornerRadiusTopStart="@dimen/radius_s"
                app:boxCornerRadiusTopEnd="@dimen/radius_s"
                app:boxCornerRadiusBottomStart="@dimen/radius_s"
                app:boxCornerRadiusBottomEnd="@dimen/radius_s"
                app:boxStrokeColor="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@id/tilDistrict">

                <AutoCompleteTextView
                    android:id="@+id/actvCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDescription"
                style="@style/Ant.Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_l"
                android:hint="@string/create_post_description_hint"
                app:layout_constraintTop_toBottomOf="@id/tilCategory">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:contentDescription="@string/cd_post_description_input"
                    android:gravity="top"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvLocationInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawablePadding="8dp"
                android:text="@string/create_post_location_waiting"
                app:drawableStartCompat="@android:drawable/ic_menu_mylocation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilDescription" />

            <Button
                android:id="@+id/btnSelectLocation"
                style="@style/Ant.Button.Default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_s"
                android:text="@string/create_post_select_location"
                app:icon="@android:drawable/ic_dialog_map"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLocationInfo" />

            <Button
                android:id="@+id/btnShare"
                style="@style/Ant.Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xl"
                android:text="@string/create_post_share"
                app:layout_constraintTop_toBottomOf="@+id/btnSelectLocation"
                tools:layout_editor_absoluteX="16dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>